@@ -197,7 +197,7 @@
      "doicon" "domenu" "make_desktop_entry" "make_session_desktop" "newicon"
      "newmenu"
      ;; dist-kernel-utils
-     "dist-kernel_PV_to_KV" "dist-kernel_build_initramfs"
+     "dist-kernel_PV_to_KV" "dist-kernel_compressed_module_cleanup"
      "dist-kernel_get_image_path" "dist-kernel_install_kernel"
      "dist-kernel_reinstall_initramfs"
      ;; distutils-r1
@@ -327,6 +327,9 @@
      "gnustep-base_pkg_setup" "gnustep-base_src_compile"
      "gnustep-base_src_configure" "gnustep-base_src_install"
      "gnustep-base_src_prepare"
+     ;; go-env
+     "go-env_go386" "go-env_goarch" "go-env_goarm"
+     "go-env_set_compile_environment"
      ;; go-module
      "ego" "go-module_live_vendor" "go-module_set_globals"
      "go-module_setup_proxy" "go-module_src_unpack"
@@ -380,16 +383,16 @@
      "java-pkg_check-phase" "java-pkg_check-versioned-jar" "java-pkg_clean"
      "java-pkg_current-vm-matches" "java-pkg_doexamples" "java-pkg_dohtml"
      "java-pkg_dojar" "java-pkg_dojavadoc" "java-pkg_dolauncher"
-     "java-pkg_doso" "java-pkg_dosrc" "java-pkg_dowar" "java-pkg_ensure-gcj"
-     "java-pkg_ensure-no-bundled-jars" "java-pkg_ensure-test"
-     "java-pkg_filter-compiler" "java-pkg_find-normal-jars"
-     "java-pkg_force-compiler" "java-pkg_get-bootclasspath"
-     "java-pkg_get-javac" "java-pkg_get-jni-cflags" "java-pkg_get-source"
-     "java-pkg_get-target" "java-pkg_getjar" "java-pkg_getjars"
-     "java-pkg_init-compiler_" "java-pkg_jar-from" "java-pkg_jar-list"
-     "java-pkg_jarfrom" "java-pkg_jarinto" "java-pkg_javac-args"
-     "java-pkg_newjar" "java-pkg_register-ant-task"
-     "java-pkg_register-dependency" "java-pkg_register-environment-variable"
+     "java-pkg_doso" "java-pkg_dosrc" "java-pkg_dowar"
+     "java-pkg_ensure-no-bundled-jars" "java-pkg_filter-compiler"
+     "java-pkg_find-normal-jars" "java-pkg_force-compiler"
+     "java-pkg_get-bootclasspath" "java-pkg_get-javac"
+     "java-pkg_get-jni-cflags" "java-pkg_get-source" "java-pkg_get-target"
+     "java-pkg_getjar" "java-pkg_getjars" "java-pkg_init-compiler_"
+     "java-pkg_jar-from" "java-pkg_jar-list" "java-pkg_jarfrom"
+     "java-pkg_jarinto" "java-pkg_javac-args" "java-pkg_newjar"
+     "java-pkg_register-ant-task" "java-pkg_register-dependency"
+     "java-pkg_register-environment-variable"
      "java-pkg_register-optional-dependency" "java-pkg_regjar"
      "java-pkg_regso" "java-pkg_rm_files" "java-pkg_set-current-vm"
      "java-pkg_sointo" "java-utils-2_pkg_preinst" "java-utils-2_src_prepare"
@@ -417,8 +420,9 @@
      "kernel-build_src_configure" "kernel-build_src_install"
      "kernel-build_src_test"
      ;; kernel-install
-     "kernel-install_can_update_symlink" "kernel-install_create_init"
-     "kernel-install_create_qemu_image" "kernel-install_get_qemu_arch"
+     "kernel-install_can_update_symlink" "kernel-install_compress_modules"
+     "kernel-install_create_init" "kernel-install_create_qemu_image"
+     "kernel-install_extract_from_uki" "kernel-install_get_qemu_arch"
      "kernel-install_install_all" "kernel-install_pkg_config"
      "kernel-install_pkg_postinst" "kernel-install_pkg_postrm"
      "kernel-install_pkg_preinst" "kernel-install_pkg_prerm"
@@ -457,7 +461,7 @@
      "linux_moduleinto" "modules_post_process"
      ;; llvm
      "get_llvm_prefix" "get_llvm_slot" "llvm_fix_clang_version"
-     "llvm_fix_tool_path" "llvm_pkg_setup"
+     "llvm_fix_tool_path" "llvm_pkg_setup" "llvm_tuple_to_target"
      ;; llvm.org
      "get_lit_flags" "llvm.org_set_globals" "llvm.org_src_prepare"
      "llvm.org_src_unpack" "llvm_are_manpages_built" "llvm_install_manpages"
@@ -638,8 +642,7 @@
      "qt_use_compile_test" "qt_use_disable_config" "qt_use_disable_mod"
      ;; qt6-build
      "qt6-build_src_configure" "qt6-build_src_install" "qt6-build_src_prepare"
-     "qt6-build_src_test" "qt6-build_src_unpack" "qt6_symlink_binary_to_path"
-     "qt_feature"
+     "qt6-build_src_test" "qt6-build_src_unpack" "qt_feature"
      ;; readme.gentoo-r1
      "readme.gentoo_create_doc" "readme.gentoo_print_elog"
      ;; rebar
@@ -756,19 +759,20 @@
      "tc-detect-is-softfloat" "tc-enables-cxx-assertions"
      "tc-enables-fortify-source" "tc-enables-pie" "tc-enables-ssp"
      "tc-enables-ssp-all" "tc-enables-ssp-strong" "tc-endian" "tc-env_build"
-     "tc-export" "tc-export_build_env" "tc-get-c-rtlib" "tc-get-compiler-type"
-     "tc-get-cxx-stdlib" "tc-getAR" "tc-getAS" "tc-getBUILD_AR"
-     "tc-getBUILD_AS" "tc-getBUILD_CC" "tc-getBUILD_CPP" "tc-getBUILD_CXX"
-     "tc-getBUILD_LD" "tc-getBUILD_NM" "tc-getBUILD_OBJCOPY"
-     "tc-getBUILD_PKG_CONFIG" "tc-getBUILD_PROG" "tc-getBUILD_RANLIB"
-     "tc-getBUILD_READELF" "tc-getBUILD_STRINGS" "tc-getBUILD_STRIP"
-     "tc-getCC" "tc-getCPP" "tc-getCXX" "tc-getDLLWRAP" "tc-getF77" "tc-getFC"
-     "tc-getGCJ" "tc-getGO" "tc-getLD" "tc-getNM" "tc-getOBJCOPY"
-     "tc-getOBJDUMP" "tc-getPKG_CONFIG" "tc-getPROG" "tc-getRANLIB" "tc-getRC"
-     "tc-getREADELF" "tc-getSTRINGS" "tc-getSTRIP" "tc-getTARGET_CPP"
-     "tc-has-tls" "tc-is-clang" "tc-is-cross-compiler" "tc-is-gcc"
-     "tc-is-softfloat" "tc-is-static-only" "tc-ld-disable-gold"
-     "tc-ld-force-bfd" "tc-ld-is-gold" "tc-ld-is-lld" "tc-ninja_magic_to_arch"
+     "tc-export" "tc-export_build_env" "tc-get-build-ptr-size"
+     "tc-get-c-rtlib" "tc-get-compiler-type" "tc-get-cxx-stdlib"
+     "tc-get-ptr-size" "tc-getAR" "tc-getAS" "tc-getBUILD_AR" "tc-getBUILD_AS"
+     "tc-getBUILD_CC" "tc-getBUILD_CPP" "tc-getBUILD_CXX" "tc-getBUILD_LD"
+     "tc-getBUILD_NM" "tc-getBUILD_OBJCOPY" "tc-getBUILD_PKG_CONFIG"
+     "tc-getBUILD_PROG" "tc-getBUILD_RANLIB" "tc-getBUILD_READELF"
+     "tc-getBUILD_STRINGS" "tc-getBUILD_STRIP" "tc-getCC" "tc-getCPP"
+     "tc-getCXX" "tc-getDLLWRAP" "tc-getF77" "tc-getFC" "tc-getGCJ" "tc-getGO"
+     "tc-getLD" "tc-getNM" "tc-getOBJCOPY" "tc-getOBJDUMP" "tc-getPKG_CONFIG"
+     "tc-getPROG" "tc-getRANLIB" "tc-getRC" "tc-getREADELF" "tc-getSTRINGS"
+     "tc-getSTRIP" "tc-getTARGET_CPP" "tc-has-tls" "tc-is-clang"
+     "tc-is-cross-compiler" "tc-is-gcc" "tc-is-lto" "tc-is-softfloat"
+     "tc-is-static-only" "tc-ld-disable-gold" "tc-ld-force-bfd"
+     "tc-ld-is-gold" "tc-ld-is-lld" "tc-ninja_magic_to_arch"
      "tc-stack-grows-down" "tc-tuple-is-softfloat"
      ;; tree-sitter-grammar
      "tree-sitter-grammar_src_compile" "tree-sitter-grammar_src_install"
